<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yongjiu Rental Bicycle Map</string>
    <string name="show_cluster_detail">Zoom in to view..</string>
    <string name="station_state">Bicycle:%1$d, Empty Port:%2$d</string>
    <string name="loading_state">Fetching Station State..</string>
    <string name="loading_screen">Loading..</string>
    <string name="action_position">Current Position</string>
    <string name="action_about">About</string>
    <string name="title_activity_about">About</string>
    <string name="about_about_title">Yongjiu Rental Bicycal Map</string>
    <string name="about_about_text">Thus application is made at beginning to fulfill the developer\'s own needs that the position and status of parking stations of Yongjiu Rental Bicycle could be accessible at any time. The related information is from Yongjiu\'s official website: www.chinarmb.com. Somehow due to the inaccuracy of some station\'s location data, they could be modified by the developer. Any advice on the information or the application is welcomed.\n\nE-mail:sherlockq@gmail.com</string>
    <string name="about_acknowledge_title">Licence and Acknowledgement</string>
    <string name="about_acknowledge_text">"Yongjiu" brand, text and icons are properties of Shanghai Yongjiu Bicycle Co.Ltd.\n\nThe names, locations and other data regarding stations are from www.chinarmb.com while location of some could be modified. The realtime status of stations are directly from www.chinarmb.com\n\nThis application is under DBAD licence. Refer to http://www.dbad-license.org；Source code is published at https://github.com/sherlockq/cnrentalbikemap-android\n\nThis application used or modified codes, modules and images from below sources (May not be complete)\n\n-android-maps-extensions: Provides extension for Google Maps API，espcially the clustering of markders\n-ActionBarSherlock: Provides support of ActionBar for Android below 3.0\n-Vector of bicycle from unknown source and port image from chinarmb.com are used to make application icon. Well that ugly picture top on this page is from my own.\n-Vector images from http://www.yay.se/resources/android-native-icons are used to make icons for ActionBar</string>
	<string name="i_am_here">I\'m Here~</string>
	
	<string name="cant_fix_offset">The current position is with offset and not accurate</string>
</resources>